# remarkable-gtd

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  flake.nix  pyproject.toml  today.rmdoc  today_decisions.json  today_decisions_1x.json  today_decisions_e2e.json
.claude/: settings.json
.github/workflows/: ci.yml
agent_docs/: handover.md  milestones.md  plan.md  prompt.md  research.md
agent_docs/handover/gtd-remarkable-interface/: README.md
agent_docs/handover/gtd-remarkable-interface/project/: GTD Sheet.html  design-canvas.jsx  gtd-data.js  gtd-render.js  gtd.css
agent_docs/handover/gtd-remarkable-interface/project/explore/: row-directions.html
agent_docs/handover/gtd-remarkable-interface/project/generator/: README.md  generate.py  requirements.txt  tasks.example.json
scripts/: download_annotated.sh  upload_to_remarkable.sh
src/remarkable_gtd/: __init__.py
src/remarkable_gtd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/remarkable_gtd/cli/: _git.py  apply_decisions.py  daily.py  process.py  render_annotations.py  scan_pdf.py  vault_to_tasks.py
src/remarkable_gtd/common/: geometry.py  schema.py
src/remarkable_gtd/rm/: __init__.py  annotations.py  api.py
src/remarkable_gtd/scan/: cli.py  decisions.py  ink.py  manifest_io.py  ocr.py  pipeline.py  qr.py  rectify.py
src/remarkable_gtd/vault/: __init__.py  applier.py  parser.py
tests/: conftest.py  test_decisions.py  test_end_to_end.py  test_ink.py  test_manifest.py  test_qr.py  test_rectify.py  test_vault_applier.py  test_vault_parser.py
tests/fixtures/: sheet.manifest.json  tasks.example.json  tasks.min.json
tests/fixtures/annotated_scan/: gtd_sheet.rmdoc  regen.py
