[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remarkable-gtd"
version = "0.1.0"
description = "GTD paper workflow for reMarkable 2 — PDF generation + machine-vision scanner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.1",
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
gen = [
    "playwright>=1.40",
    "pypdf>=4.0",
    "qrcode>=7.4",
]
scan = [
    "opencv-python>=4.8",
    "pyzbar>=0.1.9",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.23",
]
rm = [
    "rmscene>=0.4",
]
dev = [
    "pytest",
    "pdf2image",
]

[project.scripts]
gtd-gen = "remarkable_gtd.gen.cli:main"
gtd-scan = "remarkable_gtd.scan.cli:main"
gtd-vault-to-tasks = "remarkable_gtd.cli.vault_to_tasks:main"
gtd-render-annotations = "remarkable_gtd.cli.render_annotations:main"
gtd-scan-pdf = "remarkable_gtd.cli.scan_pdf:main"
gtd-apply-decisions = "remarkable_gtd.cli.apply_decisions:main"
gtd-daily = "remarkable_gtd.cli.daily:main"
gtd-process = "remarkable_gtd.cli.process:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"remarkable_gtd.gen.assets" = ["*.css", "*.j2"]
