[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remarkable-gtd"
version = "0.1.0"
description = "GTD PDF generator and machine-vision scanner for the reMarkable 2 tablet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow>=10.0",
]

[project.optional-dependencies]
gen = [
    "playwright>=1.40",
    "pypdf>=4.0",
    "Jinja2>=3.1",
    "qrcode>=7.4",
    "Pillow>=10.0",
]
scan = [
    "opencv-python>=4.8",
    "pyzbar>=0.1.9",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.23",
    "numpy",
    "Pillow>=10.0",
]
dev = [
    "pytest",
    "pdf2image",
    "remarkable-gtd[gen]",
    "remarkable-gtd[scan]",
]

[project.scripts]
gtd-gen = "remarkable_gtd.gen.cli:main"
gtd-scan = "remarkable_gtd.scan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"remarkable_gtd.gen.assets" = ["*.j2", "*.css"]
